python-copper (0.0.3) UNRELEASED; urgency=medium

  * Remove unused max_retries from the protocol

 -- Alexey Borzenkov <snaury@gmail.com>  Mon, 03 Aug 2015 13:03:44 +0300

python-copper (0.0.2) unstable; urgency=medium

  * Use python logging, auto unpublish on shutdown

 -- Alexey Borzenkov <snaury@gmail.com>  Fri, 31 Jul 2015 13:28:08 +0300

python-copper (0.0.1) unstable; urgency=medium

  * Initial release.

 -- Alexey Borzenkov <snaury@gmail.com>  Wed, 29 Jul 2015 12:17:06 +0300