@@ -1,6 +1,7 @@
 python-copper (0.0.3) UNRELEASED; urgency=medium
 
   * Remove unused max_retries from the protocol
+  * Remove min/max_distance from subscribe/set_route arguments
 
  -- Alexey Borzenkov <snaury@gmail.com>  Mon, 03 Aug 2015 13:03:44 +0300
 
